Adds the creation of new feeds

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
     <%= form_token %>
     <input type="submit" value="Logout">
   </form>
+  <br>
+  <a href="<%= new_feed_url %>">Add New Feed</a>
 <% end %>
 
 <%= yield %>
