--- a/app/views/feeds/new.html.erb
+++ b/app/views/feeds/new.html.erb
@@ -8,7 +8,7 @@
   <br>
 
   <label for="feed_url">Feed url:</label>
-  <input type="text" id="feed_url" url="feed[url]" value="">
+  <input type="text" id="feed_url" name="feed[url]" value="">
   <br>
   <br>
 
