Adds feedjira gem and now initializes a feed by fetching it.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,7 +20,7 @@
   <br>
 
   <label for="user_password_confirmation">Password Confirmation:</label>
-  <input type="password_confirmation"
+  <input type="password"
          id="user_password_confirmation"
          name="user[password_confirmation]"
          value="">
