Adds EntriesController and Entries show view.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+<% if flash[:errors] %>
+  <ul>
+    <% flash[:errors].each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <% if logged_in? %>
   Logged in as:<a href="<%= user_url(current_user) %>"><%= current_user.username %><a>
   <br>
@@ -18,6 +26,8 @@
   </form>
   <br>
   <a href="<%= new_feed_url %>">Add New Feed</a>
+  <a href="<%= feeds_url %>">All Feeds</a>
+
 <% end %>
 
 <%= yield %>
