Adds entry index that aggregates all feeds and orders by date published.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
   <br>
   <a href="<%= new_feed_url %>">Add New Feed</a>
   <a href="<%= feeds_url %>">All Feeds</a>
+  <a href="<%= entries_url %>">All Entries</a>
 
 <% end %>
 
