Begins writing the Feed#update_entries. All old entries are deleted in a single query, but adding entries requires multiple queries.

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,8 +1,8 @@
 <h1>All Entries</h1>
 
 <ul>
-  <% @entries.each do |entry| %>
-    <li>
+  <% @entries.each_with_index do |entry, i| %>
+    <li><%= i %>
       <a href="<%= entry_url(entry) %>"><%= entry.title %></a>
       <a href="<%= feed_url(entry.feed) %>"><%= entry.feed.name %></a>
       <%= entry.published_at %>
