Adds Category Views.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
   <a href="<%= new_feed_url %>">Add New Feed</a>
   <a href="<%= feeds_url %>">All Feeds</a>
   <a href="<%= entries_url %>">All Entries</a>
+  <a href="<%= categories_url %>">Categories</a>
 
 <% end %>
 
