Modifies Categories Controller and Views to dispaly entries for each category.  Also fixed bug with feed initialization.

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -9,6 +9,18 @@
   <br>
   <br>
 
+  <% feeds.each do |feed| %>
+    <input type="checkbox"
+           name="category[feeds][]"
+           id="category_feed_<%= feed.name %>"
+           value="<%= feed.id %>"
+           <%= "checked" if catFeeds.include?(feed) %>>
+    <label for="cat_color_<%= feed.name %>"><%= feed.name %></label>
+    <br>
+  <% end %>
+  <br>
+  <Br>
+
   <%= hidden %>
   <%= form_token %>
 
