--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Edit <%= @category.name %></h1>
 
-<%= render "categories/form", category: @category %>
+<%= render "categories/form", category: @category, feeds: @feeds, catFeeds: @catFeeds %>
