--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Create Category</h1>
 
-<%= render "categories/form", category: @category %>
+<%= render "categories/form", category: @category, feeds: @feeds %>
