--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
   <a href="<%= feeds_url %>">All Feeds</a>
   <a href="<%= entries_url %>">All Entries</a>
   <a href="<%= categories_url %>">Categories</a>
-
+  <a href="<%= recent_entries_url %>"> Recently Read Entries</a>
 <% end %>
 
 <%= yield %>
