--- a/app/assets/templates/feeds/index.jst.ejs
+++ b/app/assets/templates/feeds/index.jst.ejs
@@ -1,15 +1,10 @@
 <h1>All</h1>
 
 <ul>
-
   <% feeds.forEach( function(feed) { %>
   <li>
-    <a href="#"><%= feed.name %></a>
-    <form  action="#" method="POST">
-      <%= form_token %>
-      <input type="hidden" name="_method" value="DELETE">
-      <input type="submit" value="Remove Feed">
-    </form>
+    <a href="#/feeds/<%=feed.id%>"><%= feed.escape("name") %></a>
+    <button data-id=<%=feed.id%>>Remove Feed</button>
   </li>
   <% }); %>
 
