Adds functioning new Feed form to Backbone app.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,8 @@
         <input type="submit" value="Logout">
       </form>
       <br>
-      <a href="<%= new_feed_url %>">Add New Feed</a>
-      <a href="<%= feeds_url %>">All Feeds</a>
+      <a href="/#/feeds/new">Add New Feed</a>
+      <a href="/#">All Feeds</a>
       <a href="<%= entries_url %>">All Entries</a>
       <a href="<%= categories_url %>">Categories</a>
       <a href="<%= recent_entries_url %>"> Recently Read Entries</a>
