--- a/app/assets/templates/entries/list.jst.ejs
+++ b/app/assets/templates/entries/list.jst.ejs
@@ -2,6 +2,6 @@
 <li>
   <a href="#/entries/<%= entry.id %>"><%= entry.escape("title") %></a>
   <a href="#/feeds/<%= entry.escape('feed_id') %>"><%= entry.escape("feed_name") %></a>
-  <%= entry.escapte("published_at") %>
+  <%= entry.escape("published_at") %>
 </li>
 <% }); %>
