--- a/app/assets/templates/entries/list.jst.ejs
+++ b/app/assets/templates/entries/list.jst.ejs
@@ -1,6 +1,6 @@
 <% entries.forEach(function (entry) { %>
 <li>
-  <a href="#/entries/<%= entry.id %>"><%= entry.escape("title") %></a>
+  <a href="#" class="entry-title"><%= entry.escape("title") %></a>
   <a href="#/feeds/<%= entry.escape('feed_id') %>"><%= entry.escape("feed_name") %></a>
   <%= entry.escape("published_at") %>
 </li>
