--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       <br>
       <a href="/#/feeds/new">Add New Feed</a>
       <a href="/#">All Feeds</a>
-      <a href="<%= entries_url %>">All Entries</a>
+      <a href="/#/entries">All Entries</a>
       <a href="<%= categories_url %>">Categories</a>
       <a href="<%= recent_entries_url %>"> Recently Read Entries</a>
     </nav>
