--- a/app/assets/templates/categories/index.jst.ejs
+++ b/app/assets/templates/categories/index.jst.ejs
@@ -1,11 +1,11 @@
 <h1>Categories</h1>
 
-<a href="/categories/new" class="new-category">New Category</a>
+<a href="/#/categories/new" class="new-category">New Category</a>
 
 <ul>
   <% categories.forEach(function (category) { %>
   <li>
-    <a href="#/categories/<%= category.id %>"><%= category.escape("name") %></a>
+    <a href="/#/categories/<%= category.id %>"><%= category.escape("name") %></a>
     <button class="delete" data-id="<%= category.id %>">Delete Category</button>
   </li>
   <% }); %>
