--- a/app/assets/templates/feeds/index.jst.ejs
+++ b/app/assets/templates/feeds/index.jst.ejs
@@ -4,7 +4,7 @@
   <% feeds.forEach( function(feed) { %>
   <li>
     <a href="#/feeds/<%=feed.id%>"><%= feed.escape("name") %></a>
-    <button data-id=<%=feed.id%>>Remove Feed</button>
+    <button class="remove-feed" data-id=<%=feed.id%>>Remove Feed</button>
   </li>
   <% }); %>
 
