Completes transition to backbone, except for category edit form.

--- a/app/assets/templates/categories/index.jst.ejs
+++ b/app/assets/templates/categories/index.jst.ejs
@@ -7,6 +7,7 @@
   <li>
     <a href="/#/categories/<%= category.id %>"><%= category.escape("name") %></a>
     <button class="delete" data-id="<%= category.id %>">Delete Category</button>
+    <a href="/categories/<%= category.id %>/edit">Edit Category</a>
   </li>
   <% }); %>
 </ul>
