--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
       <a href="/#">All Feeds</a>
       <a href="/#/entries">All Entries</a>
       <a href="/#/categories">Categories</a>
-      <a href="<%= recent_entries_url %>"> Recently Read Entries</a>
+      <a href="/#/entries/recent"> Recently Read Entries</a>
     </nav>
   <% end %>
 
