--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,40 +16,15 @@
   </ul>
 <% end %>
 
-<content>
+<section class="content">
 
-  <% if logged_in? %>
-    <nav class="sidebar">
-      <h3>FeedMe</h3>
-      <a href="<%= user_url(current_user) %>"><%= current_user.username %><a>
-      <br>
-      <form action="<%= session_url %>" method="POST">
-        <input type="hidden" name="_method" value="DELETE">
-        <%= form_token %>
-        <input type="submit" value="Logout">
-      </form>
-      <br>
-      <a href="/#/feeds/new">Add New Feed</a>
-      <a href="/#">All Feeds</a>
-      <a href="/#/entries">All Entries</a>
-      <a href="/#/categories">Categories</a>
-      <a href="/#/entries/recent"> Recently Read Entries</a>
-    </nav>
+  <%= render 'shared/sidebar' %>
 
-  <% else %>
-  <nav class="sidebar">
-    <h3>FeedMe</h3>
-    <a href="<%= new_user_url %>">Sign Up</a>
-    <a href="<%= new_session_url %>">Sign In</a>
-  </nav>
-
-  <% end %>
-
-  <main>
+  <main class="display">
     <%= yield %>
   </main>
 
-</content>
+</section>
 
 </body>
 </html>
