--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,3 @@
-<h1>New User</h1>
+<h1 class=page-title>New User</h1>
 
 <%= render 'users/form', user: @user %>
-<br>
-<br>
-<a href="<%= new_session_url %>">Sign In!</a>
