Adds simple styles for forms

--- a/app/assets/templates/categories/show.jst.ejs
+++ b/app/assets/templates/categories/show.jst.ejs
@@ -1,1 +1,3 @@
-<h1 id="category-name"><%= category.escape("name") %></h1>
+<header>
+<h1 class="page-title" id="category-name"><%= category.escape("name") %></h1>
+</header>
