--- a/app/assets/templates/feeds/new.jst.ejs
+++ b/app/assets/templates/feeds/new.jst.ejs
@@ -1,6 +1,10 @@
-<h1>Add A New Feed</h1>
+<header>
+  <h1 class="page-title">Add A New Feed</h1>
+</header>
 
-<label for="feed_url">Feed url:</label>
-<input type="text" id="feed_url" name="feed[url]" value="">
+<form>
+  <label for="feed_url">Feed url:</label>
+  <input type="text" id="feed_url" name="feed[url]" value="">
 
-<input type="submit" value="Add Feed">
+  <input type="submit" value="Add Feed">
+<form>
