--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
-<h1 class=page-title>New User</h1>
+<header>
+  <h1 class=page-title>New User</h1>
+</header>
 
 <%= render 'users/form', user: @user %>
