--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -28,9 +28,51 @@ ul {
   list-style: none;
 }
 
+
 section.content {
+  min-height: 500px;
   position: relative;
   font-weight: 16px;
+}
+
+form {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px 40px;
+  margin: 0px auto;
+}
+
+form label {
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  text-transform: lowercase;
+}
+
+form input[type=text], input[type=password] {
+  display: block;
+  width: 300px;
+  margin: 20px auto;
+  border: 1px solid #999;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
+form input[type=submit] {
+  width: 100px;
+  border: 1px solid #999;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px 10px;
+  text-align: center;
+  display: block;
+  cursor: pointer;
+}
+
+form input[type=submit]:hover {
+  background: #999;
 }
 
 /* sidebar */
@@ -83,17 +125,14 @@ nav a:hover {
   color: #999;
 }
 
-.logout {
-  width: 100px;
-  border: 1px solid #999;
-  border-radius: 5px;
-  margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 5px 10px;
-  text-align: center;
-  display: block;
+.sidebar-form {
+    border: 0;
+    padding: 0px;
+    margin: 0px auto;
 }
+
+.logout {
+  }
 
 .logout:hover {
   background: #999;
@@ -105,7 +144,22 @@ nav a:hover {
 
 main.display {
   position: absolute;
-  top: 0;
   left: 191px;
+  right: 0px;
+  top: 0px;
   min-height: 500px;
+  padding: 20px;
+}
+
+header {
+  margin-bottom: 30px;
+  display: block;
+
+}
+
+.page-title {
+  font-weight: bold;
+  text-transform: lowercase;
+  font-size: 36px;
+  text-align: center;
 }
