--- a/app/assets/templates/categories/form.jst.ejs
+++ b/app/assets/templates/categories/form.jst.ejs
@@ -1,6 +1,10 @@
-<h1>Create Category</h1>
+<header>
+  <h1 class="page-title">Create Category</h1>
+</header>
 
-<label for="category_name">Name:</label>
-<input type="text" id="category_name" name="category[name]" value="">
+<form>
+  <label for="category_name">Name:</label>
+  <input type="text" id="category_name" name="category[name]" value="">
 
-<input type="submit" value="Create Category">
+  <input type="submit" value="Create">
+<form>
