--- a/app/assets/templates/categories/index.jst.ejs
+++ b/app/assets/templates/categories/index.jst.ejs
@@ -1,4 +1,6 @@
-<h1>Categories</h1>
+<header>
+  <h1 class="page-title">Categories</h1>
+</header>
 
 <a href="/#/categories/new" class="new-category">New Category</a>
 
