--- a/app/assets/templates/feeds/show.jst.ejs
+++ b/app/assets/templates/feeds/show.jst.ejs
@@ -1,1 +1,3 @@
-<h1 id="feed-name"><%= feed.escape("name") %></h1>
+<header>
+  <h1 class="page-title" id="feed-name"><%= feed.escape("name") %></h1>
+</header>
