--- a/app/assets/templates/entries/list.jst.ejs
+++ b/app/assets/templates/entries/list.jst.ejs
@@ -1,8 +1,8 @@
 <% entries.forEach(function (entry) { %>
-<li>
-  <a href="#" class="entry-title"><%= entry.escape("title") %></a>
+<li class="entry-list-elem">
   <a href="#/feeds/<%= entry.escape('feed_id') %>"><%= entry.escape("feed_name") %></a>
-  <%= entry.escape("published_at") %>
+  <a href="#" class="entry-title"><%= entry.escape("title") %></a>
+  <%= TimeUtils.getTimeDiff(entry.escape("published_at")) %>
   <article class="entry closed" data-id="<%= entry.id %>"></article>
 </li>
 <% }); %>
