--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -207,3 +207,44 @@ ul.entry-list {
   width: 75px;
   padding-left: 5px;
 }
+
+/* feed list styles (maybe some should be general list styles?) */
+
+.feed-list {
+  display: block;
+  width: 700px;
+  border: 1px solid #999;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 10px auto;
+}
+
+.feed-list-item {
+  padding: 10px 0px;
+  border-bottom: 1px dotted #999;
+}
+
+.feed-list-item:last-child {
+  border: 0;
+}
+
+.feed-list-item .feed-link {
+  display: block;
+  float: left;
+  text-align: center;
+  font-size: 24px;
+}
+
+.feed-list-item .remove-feed {
+  display: block;
+  float: right;
+  font-weight: bold;
+  font-family: sans-serif;
+  margin-top: 2px;
+  font-size: 18px;
+}
+
+.feed-list-item .remove-feed:hover {
+  color: #f280a1;
+  cursor: pointer;
+}
