Adds logic and style for the category edit page. Categories can now be expanded and feeds can be removed from them.

--- a/app/assets/templates/feeds/index.jst.ejs
+++ b/app/assets/templates/feeds/index.jst.ejs
@@ -8,7 +8,7 @@
     <a href="#/feeds/<%=feed.id%>" class="feed-link">
       <%= feed.escape("name") %>
     </a>
-    <button class="remove-feed" data-id=<%=feed.id%>>x</button>
+    <button class="remove-feed delete" data-id=<%=feed.id%>>x</button>
   </li>
   <% }); %>
 
