--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -35,6 +35,16 @@ section.content {
   font-weight: 16px;
 }
 
+.delete {
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 18px;
+}
+
+.delete:hover {
+  color: #f280a1;
+  cursor: pointer;
+}
 
 /* forms */
 
@@ -238,13 +248,54 @@ ul.entry-list {
 .feed-list-item .remove-feed {
   display: block;
   float: right;
-  font-weight: bold;
-  font-family: sans-serif;
   margin-top: 2px;
-  font-size: 18px;
 }
 
-.feed-list-item .remove-feed:hover {
+
+/* Category list and edit styles */
+.category-list-item {
+  display: block;
+  width: 300px;
+  padding: 10px 20px;
+  border: 1px solid #999;
+  border-radius: 5px;
+  margin-top: 30px;
+}
+
+.category-list-item .category-title {
+  display: block;
+  float: left;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.category-list-item .delete {
+  display: block;
+  float: right;
+}
+
+.category-list-item .edit {
+  display: block;
+  float: right;
+  padding-right: 5px;
+  margin-right: 5px;
+  border-right: 1px solid #999;
+}
+
+.category-list-item .edit:hover {
   color: #f280a1;
-  cursor: pointer;
+}
+
+.category-feed-item {
+  margin-top: 5px;
+  padding-top: 5px;
+  border-top: 1px dotted #999;
+}
+
+.category-feed-label {
+  display: block;
+  float: left;
+  width: 270px;
+  height: 20px;
+  overflow: hidden;
 }
