--- a/app/assets/templates/categories/form.jst.ejs
+++ b/app/assets/templates/categories/form.jst.ejs
@@ -1,8 +1,4 @@
-<header>
-  <h1 class="page-title">Create Category</h1>
-</header>
-
-<form>
+<form class="new-cat-form closed">
   <label for="category_name">Name:</label>
   <input type="text" id="category_name" name="category[name]" value="">
 
