--- a/app/assets/templates/categories/cat_feeds.jst.ejs
+++ b/app/assets/templates/categories/cat_feeds.jst.ejs
@@ -14,7 +14,7 @@
         <label class="category-feed-label">
           <%= feed.escape("name") %>
         </label>
-        <button class="remove-feed delete data-feed-id="<%=feed.id%>">x</button>
+        <button class="remove-feed delete" data-feed-id="<%= feed.id %>">x</button>
       </li>
     <% }); %>
   </ul>
