Completes profile edit form without picture upload.

--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -19,4 +19,5 @@
   </tr>
 </table>
 
+<label class="description-label">About <%= user.escape('username') %>:</label>
 <p class="description"><%= user.escape('description') %></p>
