Gets basics of backbone login system working.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
 <% end %>
 
 <section class="content">
-
-  <%= render 'shared/sidebar' %>
+  <section id="sidebar-sec">
+  </section>
 
   <main class="display">
     <%= yield %>
