Completes Backbone Auth.

--- a/app/assets/templates/sidebar/logged_in.jst.ejs
+++ b/app/assets/templates/sidebar/logged_in.jst.ejs
@@ -12,7 +12,7 @@
           <a href="/#/feeds/new">Add New Feed</a>
         </li>
         <li class="nav-list-item">
-          <a href="/#">All Feeds</a>
+          <a href="/#/feeds">All Feeds</a>
         </li>
         <li class="nav-list-item">
           <a href="/#/entries">All Entries</a>
