--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -172,7 +172,12 @@ nav a:hover {
 }
 
 .logout {
+  display: block;
   background: #ddd;
+  padding: 5px 10px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  margin: 10px auto;
 }
 
 .logout:hover {
