Completes simple styling of profile edit and show pages.

--- a/app/assets/templates/users/edit.jst.ejs
+++ b/app/assets/templates/users/edit.jst.ejs
@@ -1,4 +1,19 @@
-<form class="user-edit-form">
+<form class="user-edit-form group">
+
+<section class="profile-left">
+
+  <label for="user_image">Profile Picture:</label>
+  <div class="profile-pic">
+    <img src="<%= user.get('image_url') %>" alt="Profile Picture">
+  </div>
+
+  <input type="file" name="user[image]" id="user_image_input" class="user-image">
+
+  <label for="user_description">About You:</label>
+  <textarea name="user[description]" id="user_description"><%= user.escape('description') %></textarea>
+</section>
+
+<section class="profile-right">
 
   <label for="user_fname">First Name:</label>
   <input type="text" name="user[fname]" id="user_fname" value="<%= user.escape('fname') %>">
@@ -6,16 +21,16 @@
   <label for="user_lname">Last Name:</label>
   <input type="text" name="user[lname]" id="user_lname" value="<%= user.escape('lname') %>">
 
+
   <label for="user_email">Email:</label>
-  <input type="text" name="user[email]" value="<%= user.escape('email') %>">
+  <input type="text" name="user[email]" id="user_email" value="<%= user.escape('email') %>">
 
-  <label for="user_description">About You:</label>
-  <textarea name="user[description]" id="user_description"><%= user.escape('description') %></textarea>
+  <label for="user_password">Password:</label>
+  <input type="password" name="user[password]" id="user_password">
 
-  <label for="user_image">Profile Picture:</label>
-  <input type="file" name="user[image]" id="user_image" value="">
+  <label for="user_password_confirmation">Password Confirmation:</label>
+  <input type="password" name="user[password_confirmation]" id="user_password_confirmation">
 
-
+</section>
   <input type="submit" value="Update!">
-
 </form>
