--- a/app/assets/templates/sidebar/logged_in.jst.ejs
+++ b/app/assets/templates/sidebar/logged_in.jst.ejs
@@ -1,7 +1,7 @@
 
   <h3 class="logo">FeedMe</h3>
 
-    <a href="#/users/<%= user.id %>/edit" class="user-link">
+    <a href="#/users/edit" class="user-link">
       <%= user.escape("username") %>
     <a>
 
