--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -21,7 +21,7 @@
     <label class="user-label" for="user_lname">Last Name:</label>
     <p class="user-info" id="user_lname"><%= user.escape('lname') %></p>
 
-  <button class=follow-btn>Follow!</button>
+  <button class="follow-btn"><%= buttonText %></button>
   </section>
 
 </section>
