User's personal feed is now published at api/users/:id/personal_feed

--- a/app/assets/templates/sidebar/logged_in.jst.ejs
+++ b/app/assets/templates/sidebar/logged_in.jst.ejs
@@ -23,5 +23,8 @@
         <li class="nav-list-item">
           <a href="/#/entries/recent"> Recently Read Entries</a>
         </li>
+        <li class="nav-list-item">
+          <a href="/#/users">Find Curators</a>
+        </li>
       </ul>
   </nav>
