--- a/app/assets/templates/entries/list.jst.ejs
+++ b/app/assets/templates/entries/list.jst.ejs
@@ -6,6 +6,7 @@
   </a>
   <a href="#" class="entry-title" id="entry-title-<%= entry.id %>"><%= entry.escape("title") %></a>
   <time class="pub-diff"><%= TimeUtils.getTimeDiff(entry.escape("published_at"))%></time>
+  <input type="hidden" value="<%= entry.get('link') %>" class="hidden-link">
   <article class="entry closed" id="article-entry-<%= entry.id %>" data-id="<%= entry.id %>"></article>
 </li>
 <% }); %>
