Completes Keyboard Command instructions.

--- a/app/assets/templates/sidebar/logged_in.jst.ejs
+++ b/app/assets/templates/sidebar/logged_in.jst.ejs
@@ -26,5 +26,8 @@
         <li class="nav-list-item">
           <a href="/#/users">Find Curators</a>
         </li>
+        <li class="nav-list-item">
+          <a href="#" class="key-command-open">Keyboard Commands</a>
+        </li>
       </ul>
   </nav>
