--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -596,3 +596,57 @@ p.user-description {
   width: 1100px;
   margin: auto;
 }
+
+/* Modals */
+
+.modal-background {
+  background:  #aaa;
+  opacity: .6;
+  position: fixed;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.modal {
+  height: 420px;
+  width: 600px;
+  background: #fff;
+  z-index: 1;
+  position: fixed;
+  margin-left: -300px;
+  left: 50%;
+  margin-top: -250px;
+  top: 50%;
+  border-radius: 5px;
+  padding: 20px 10px;
+  border: 1px solid #999;
+  text-align: center;
+}
+
+.modal label {
+  font-weight: bold;
+}
+
+.modal p {
+  padding: 5px;
+  margin-bottom: 5px;
+  border-bottom: 1px dotted #ccc;
+}
+
+
+.close-modal {
+  padding: 20px 40px;
+  border: 1px solid #f280a1;
+  border-radius: 5px;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.key-list {
+    display: block;
+    width: 500px;
+    margin: 20px;
+}
